# license

./: CMakeLists.txt  README.md  main.cpp  main.py  verify.cpp
cmake/: build.cmake  dependency.cmake
config/: env.sh  license_server.sig  server.crt  server.key  server_cert.pem
example/: CMakeLists.txt  gen_license.cpp  gen_server_license.cpp  icell_mac.cpp  main.py  private_key.pem  verify.cpp
include/: activator.h  device.h  hash.h  license_parser.h  utils.h
python/: bindings.cpp
src/: CMakeLists.txt  activator.cpp  device.cpp  hash.cpp  license_info.cpp  license_parser.cpp  utils.cpp  verify.cpp
src/license/: CMakeLists.txt
src/license-client/: CMakeLists.txt  press_tool.cpp
src/license-client/include/: encoder.h  verify.h
src/license-client/python/: CMakeLists.txt  bindings.cpp
src/license-client/src/: encooder.cpp  verify.cpp
src/license-server/: CMakeLists.txt
src/license-server/include/app/: entry.h  init.h
src/license-server/include/app/config/: arg_parser.h  env_parser.h
src/license-server/include/domain/: device_info.h  event_id.h
src/license-server/include/domain/entities/: device_info.h  instance_info.h  license_period.h
src/license-server/include/domain/event/: event.h  event_id.h
src/license-server/include/domain/handler/: auth_req_handler.h  base_msg_handler.h  handle_event.h  instance_echo_handler.h  instance_rel_handler.h  json_msg_handler.h
src/license-server/include/domain/msg/: auth_req_msg.h  inst_echo_msg.h  inst_rel_msg.h
src/license-server/include/domain/repo/: license_repo.h
src/license-server/include/infra/: enum_cast.h  singleton.h  uncloneable.h
src/license-server/include/infra/log/: base_name.h  log.h  log_color.h  log_level.h
src/license-server/include/infra/sign/: signature.h
src/license-server/include/infra/utils/: scope_timer.h  uuid.h
src/license-server/include/service/: keep_alive_service.h  license_server.h  serialization_service.h
src/license-server/src/: main.cpp
src/license-server/src/app/: entry.cpp  init.cpp
src/license-server/src/app/config/: arg_parser.cpp  env_parser.cpp
src/license-server/src/domain/: license_period.cpp
src/license-server/src/domain/event/: event.cpp
src/license-server/src/domain/handler/: auth_req_handler.cpp  handle_event.cpp  instance_echo_handler.cpp  instance_rel_handler.cpp  json_msg_handler.cpp
src/license-server/src/domain/repo/: license_repo.cpp
src/license-server/src/infra/log/: log.cpp
src/license-server/src/infra/sign/: signature.cpp
src/license-server/src/infra/utils/: uuid.cpp
src/license-server/src/service/: keep_alive_service.cpp  license_server.cpp  serialization_service.cpp
src/license/include/: device.h  license_info.h  license_parser.h  utils.h  verify.h
src/license/python/: CMakeLists.txt  bindings.cpp
src/license/src/: device.cpp  license_parser.cpp  utils.cpp  verify.cpp
test/: CMakeLists.txt  gtest_main.cpp
test/include/data/: constances.h
test/include/fixture/: base_fixture.h
test/include/initial/: power_on.h
test/src/fixture/: base_fixture.cpp
test/src/initial/: power_on.cpp
test/src/testcase/: http_msg_test.cpp  license_server_test.cpp
